correcao do projeto

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-  <header>
+  <header id="js-header">
     <div class="container">
       <a href="" class="logo" title="Logo NEON"></a>
       <nav>
@@ -391,7 +391,7 @@
   </button>
 
 
-
+  <script src="/JS/script.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
